--- a/integracaoWazeiOS/integracaoWazeiOS/Info.plist
+++ b/integracaoWazeiOS/integracaoWazeiOS/Info.plist
@@ -56,5 +56,9 @@
 		<string>UIInterfaceOrientationLandscapeLeft</string>
 		<string>UIInterfaceOrientationLandscapeRight</string>
 	</array>
+    <key>LSApplicationQueriesSchemes</key>
+    <array>
+      <string>waze</string>
+    </array>
 </dict>
 </plist>
